--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: 'Creepster', cursive;
     overflow: hidden; /* evita que aparezca scroll */
+    cursor: url('imagenes/foo439.cur') 16 16, auto;
 }
 
 /* Video de fondo */
