--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 /* Quitar márgenes y scroll del body */
+html {
+    height: 100vh;
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Creepster', cursive;
+    height: 100vh;
     overflow: hidden; /* evita que aparezca scroll */
     cursor: url('imagenes/knife.png') 4 4, auto;
     overflow-y: auto;
@@ -62,17 +68,17 @@ nav.menu ul li a:active {
 
 /* Contenedor principal */
 .contenido {
-    position: relative;              
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;         
-    min-height: 70vh;                
+    justify-content: center;
     padding: 16px;
     text-align: center;
     z-index: 1;
     margin: 0 auto;
     max-width: 900px;
+    box-sizing: border-box;
 }
 
 /* Texto de terror */
